# SolarProduction

./: .gitignore  README.md  Solar_Production.py  concat_monthly_data.py  pyproject.toml  requirements.txt  solar_production.csv  solar_production_2023.csv  streamlit_app.py
.github/workflows/: pylint.yml
MonthlyData/: solar_edge.ipynb
pages/: Comparative_Production.py  Production_Over_Time.py
