[project]
name = "solarproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.6.0",
    "numpy<2",
    "pandas==1.4.4",
    "pathlib>=1.0.1",
    "plotly-express>=0.4.1",
    "polars==1.22.0",
    "seaborn==0.12.1",
    "streamlit==1.36.0",
    "streamlit-aggrid>=1.1.5.post1",
]
